2005-04-05  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-04-01  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #74227
	* calendar/e-cal-backend-exchange-calendar.c
       	(remove_object): Removed the check for the presence of object 
	and assign proper values to old_object and object.
	(receive_objects), (book_resource): Do not send NULL for the 
	last argument in remove_object.
	
2005-04-01  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-31  Sushma Rai  <rsushma@novell.com>

	Patch by Sarfraaz Ahmed for a exchange-storage crash while exiting 
	Evolution. 
	* storage/exchange-account.c (exchange_account_set_online): Not setting 
	"account_online" flag, as it gets initialized in 
	exchange_account_connect().

	* storage/exchange-hierarchy-somedav.c (scan_subtree): Using the 
	offline mode parameter for the function, instead of reading it again.

	* storage/exchange-offline-listener.c (setup_offline_listener): Reading
	the connection id returned for online/offline status change.
	(exchange_offline_listener_dispose): Using the connection ID returned 
	by gconf_client_notify_add() while removing the notification.

2005-03-31  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_connect): Setting is_writable flag of 
	EBookBackendExchangePrivate based on user's access permissions. Also
	notifying the writable state.
	(e_book_backend_exchange_load_source): In case of offline mode, setting
	the writable state of FALSE. Calling the update_cache() after 
	e_book_backend_exchange_connect() so that is_writable flag is set 
	according to the user's access rights.
	(e_book_backend_exchange_set_mode): In case of offline mode, marking 
	the addressbook as not writable. In online mode, Setting writable and 